bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: hackathone-2-phase-iv
    labels:
        com.docker.compose.project: hackathone_2_phase_iv
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: hackathone_2_phase_iv
        com.docker.compose.service: backend
    ports:
        - name: backend-3000
          port: 3000
          protocol: TCP
          targetPort: backend-3000

# check if there is at least one published port
