bridge/base/frontend-service.yaml
#! frontend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend-published
    namespace: hackathone-2-phase-iv
    labels:
        com.docker.compose.project: hackathone_2_phase_iv
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: hackathone_2_phase_iv
        com.docker.compose.service: frontend
    ports:
        - name: frontend-8080
          port: 8080
          protocol: TCP
          targetPort: frontend-80
